[FEAT] recommendation : split reco to single object + mark as read + can search among all reco